# code-viz

./: .gitignore  CHANGELOG.md  CHART_LIBRARY_RECOMMENDATION.md  Cargo.toml  DEBUGGING_CLICK_ISSUES.md  DRILL_DOWN_FIX.md  DUAL_MODE_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTERFACE_VERIFICATION.md  Justfile  LLM.md  README.md  SSOT_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS.md  WRAPPER_NODE_FIX.md  index.html  package-lock.json  package.json  playwright.config.ts  test-analyze.js  test_api.sh  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
.spec-workflow/steering/: product.md  structure.md  tech.md
crates/code-viz-api/: Cargo.toml  SSOT_ARCHITECTURE.md  build.rs
crates/code-viz-api/src/: contracts.rs  error.rs  handlers.rs  lib.rs  models.rs  transform.rs
crates/code-viz-api/src/snapshots/: code_viz_api__contracts__tests__analyze_response_contract.snap  code_viz_api__contracts__tests__tree_node_json_contract.snap
crates/code-viz-cli/: Cargo.toml
crates/code-viz-cli/src/: config_loader.rs  main.rs
crates/code-viz-cli/src/commands/: analyze.rs  config.rs  dead_code.rs  diff.rs  mod.rs  watch.rs
crates/code-viz-cli/src/context/: cli_context.rs  mod.rs
crates/code-viz-cli/src/output/: csv.rs  dead_code.rs  json.rs  mod.rs  text.rs
crates/code-viz-cli/tests/: cli_analysis_tests.sh  cli_e2e_test.rs  dead_code_e2e_test.rs  dead_code_formatter_test.rs
crates/code-viz-cli/tests/expected/: empty-repo.json  simple-repo.json
crates/code-viz-cli/tests/fixtures/simple-repo/src/: lib.rs  main.rs  utils.rs
crates/code-viz-cli/tests/helpers/: test_utils.sh
crates/code-viz-commands/: Cargo.toml  README.md
crates/code-viz-commands/src/: analyze.rs  dead_code.rs  export.rs  lib.rs
crates/code-viz-commands/tests/: analyze_tests.rs
crates/code-viz-core/: Cargo.toml
crates/code-viz-core/src/: analyzer.rs  cache.rs  lib.rs  metrics.rs  models.rs  parser.rs  scanner.rs
crates/code-viz-core/src/context/: mod.rs  real_filesystem.rs  real_git.rs
crates/code-viz-core/src/mocks/: mock_context.rs  mock_filesystem.rs  mock_git.rs  mod.rs
crates/code-viz-core/src/snapshots/: code_viz_core__parser__tests__snapshot_javascript_ast.snap  code_viz_core__parser__tests__snapshot_javascript_ast.snap.new  code_viz_core__parser__tests__snapshot_typescript_ast.snap  code_viz_core__parser__tests__snapshot_typescript_ast.snap.new
crates/code-viz-core/src/traits/: app_context.rs  filesystem.rs  git_provider.rs  mod.rs
crates/code-viz-core/tests/: integration_test.rs
crates/code-viz-core/tests/snapshots/: integration_test__analyze_sample_repository.snap
crates/code-viz-dead-code/: Cargo.toml  README.md
crates/code-viz-dead-code/src/: cache.rs  confidence.rs  entry_points.rs  lib.rs  models.rs  reachability.rs  symbol_graph.rs
crates/code-viz-dead-code/src/symbol_graph/: builder.rs  extractors.rs  mod.rs  queries.rs  resolver.rs  tests.rs
crates/code-viz-dead-code/tests/: false_positive_test.rs  integration_test.rs
crates/code-viz-dead-code/tests/false_positive_corpus/: MANUAL_VERIFICATION.md
crates/code-viz-dead-code/tests/false_positive_corpus/project1/: package.json
crates/code-viz-dead-code/tests/false_positive_corpus/project1/src/: index.ts
crates/code-viz-dead-code/tests/false_positive_corpus/project1/src/plugins/: admin_plugin.ts  user_plugin.ts
crates/code-viz-dead-code/tests/false_positive_corpus/project2/: package.json
crates/code-viz-dead-code/tests/false_positive_corpus/project2/src/: handlers.ts  main.ts
crates/code-viz-dead-code/tests/false_positive_corpus/project3/: package.json
crates/code-viz-dead-code/tests/false_positive_corpus/project3/src/: index.ts  utils.ts
crates/code-viz-dead-code/tests/false_positive_corpus/project4/: package.json
crates/code-viz-dead-code/tests/false_positive_corpus/project4/src/: main.ts  processor.ts
crates/code-viz-dead-code/tests/false_positive_corpus/project5/: package.json
crates/code-viz-dead-code/tests/false_positive_corpus/project5/src/: index.ts  testHelpers.ts
crates/code-viz-dead-code/tests/false_positive_corpus/project5/tests/: app.test.ts
crates/code-viz-dead-code/tests/fixtures/: .gitkeep  EXPECTED.md  README.md
crates/code-viz-dead-code/tests/fixtures/sample-repo/: package.json
crates/code-viz-dead-code/tests/fixtures/sample-repo/src/: circular-a.ts  circular-b.ts  dead.ts  index.ts  internal.ts  main.ts  used.ts
crates/code-viz-dead-code/tests/fixtures/sample-repo/src/utils/: helper.ts
crates/code-viz-dead-code/tests/fixtures/sample-repo/tests/: app.test.ts
crates/code-viz-dead-code/tests/snapshots/: integration_test__analysis_result_snapshot.snap
crates/code-viz-tauri/: Cargo.toml
crates/code-viz-tauri/scripts/: verify-interface.sh
crates/code-viz-tauri/src/: commands.rs  lib.rs  logging.rs  models.rs  transform.rs  transform.test.rs
crates/code-viz-tauri/src/context/: mock_context.rs  mod.rs  real_filesystem.rs  real_git.rs  tauri_context.rs
crates/code-viz-tauri/tests/: README.md  command_tests.rs  contract_tests.rs
crates/code-viz-tauri/tests/helpers/: mod.rs  validation_utils.rs
crates/code-viz-web/: Cargo.toml
crates/code-viz-web/src/: context.rs  lib.rs  main.rs  routes.rs
docs/: ARCHITECTURE.md  MIGRATION_COMPLETE.md  TEST_COVERAGE_RCA.md  UAT_COST_REDUCTION_PLAN.md  WHY_TESTS_MISSED_WRAPPER_BUG.md  fast-iteration.md  search.md  tauri-cli.md
docs/archive/: TRAIT_BASED_DI_MIGRATION.md
e2e/: drill-down.spec.ts
scripts/: monitor-and-test.sh  test-dead-code.sh  test-integration.sh  validate-architecture.sh  verify-interface.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
src/api/: client.ts
src/hooks/: useAnalysis.test.ts  useAnalysis.ts  useDeadCodeAnalysis.ts  useTauriCommand.test.ts  useTauriCommand.ts
src/store/: analysisStore.ts
src/types/: bindings.ts  index.ts
src/utils/: colors.test.ts  colors.ts  formatting.test.ts  formatting.ts  treeTransform.test.ts  treeTransform.ts
(+56 files in other folders)
