[package]
name = "code-viz-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive treemap visualization for code analysis"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }

# Link to our analysis engine and Tauri wrapper
code-viz-core = { path = "../crates/code-viz-core" }
code-viz-tauri = { path = "../crates/code-viz-tauri" }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = "2.0.0-rc.22"

[features]
# Default features for production
default = ["custom-protocol"]
# Feature used for development to expose devtools
custom-protocol = ["tauri/custom-protocol"]
