[package]
name = "code-viz-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
code-viz-core = { path = "../code-viz-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
notify = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }