[package]
name = "code-viz-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
code-viz-core = { path = "../code-viz-core" }
code-viz-commands = { path = "../code-viz-commands" }
code-viz-dead-code = { path = "../code-viz-dead-code" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
notify = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
thiserror = { workspace = true }
ctrlc = "3.5.1"
chrono = "0.4.42"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
