[package]
name = "code-viz-core"
version = "0.1.0"
edition = "2021"
authors = ["CodeViz Team"]
description = "Core analysis engine for code-viz"
license = "MIT"

[dependencies]
serde = { workspace = true }
tree-sitter = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
tracing = { workspace = true }
bincode = "1.3"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }