[package]
name = "code-viz-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri wrapper library for code-viz analysis engine"

[dependencies]
# Core analysis engine
code-viz-core = { path = "../code-viz-core" }
code-viz-dead-code = { path = "../code-viz-dead-code", features = ["specta"] }

# Tauri and IPC
tauri = { version = "2.0", features = [] }
tauri-specta = "2.0.0-rc.20"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Type generation
specta = "2.0.0-rc.20"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Request correlation
uuid = { version = "1.11", features = ["v4", "serde"] }

[lib]
crate-type = ["lib"]
