[package]
name = "code-viz-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri wrapper library for code-viz analysis engine"

[dependencies]
# Core analysis engine
code-viz-core = { path = "../code-viz-core" }
code-viz-commands = { path = "../code-viz-commands" }
code-viz-dead-code = { path = "../code-viz-dead-code", features = ["specta"] }

# IPC and IPC
tauri = { version = "2.0", features = [] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
git2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "sync"] }

# Type generation
specta = { version = "2.0.0-rc.22", features = ["export"] }
specta-typescript = "0.0.9"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Request correlation
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }

[lib]
crate-type = ["lib"]
